turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:54: error: state  is already defined as variable state
var state = 0
    ^Turmite:-14: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
				setBrushColor(colors( rule(state)(currentColor)(NEXT_COLOR) ));
                                                           ^Turmite:-10: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
				rule(state)(currentColor)(NEXT_MOVE) match {
                                     ^Turmite:-4: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
				case _      => getGame().getLogger().log("Unknown turn command associated to i="+currentColor+": "+rule(state)(currentColor)(NEXT_MOVE));
                                                                                                                                        ^Turmite: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type ?
				state = rule(state)(currentColor)(NEXT_STATE);
                                ^Turmite:15: error: type mismatch;
 found   : Array[Int]
 required: Int
var T = new Array(Array[Int](2))
                            ^Turmite:15: error: type mismatch;
 found   : Array[Int]
 required: Int
var T = new Array(Array[Int](2))
                            ^Turmite:16: error: type mismatch;
 found   : Array[Int]
 required: Int
var U = new Array(Array[Int](2))
                            ^Turmite:16: error: type mismatch;
 found   : Array[Int]
 required: Int
var U = new Array(Array[Int](2))
                            ^Turmite:17: error: not found: value T
var T(0)=(1,2,0,1,2,1)
    ^Turmite:18: error: not found: value T
var T(1)=(0,1,0,0,1,1)
    ^Turmite:19: error: not found: value U
var U(0)=(1,0);(2,1);(0,0)
    ^Turmite:20: error: not found: value U
var U(1)=(1,0);(2,1);(1,1)
    ^Turmite:61: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
  setCouleurBrosse(colors((rule(state)(x)(0))%colors.length));baisseBrosse();leveBrosse()
                                ^Turmite:62: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type Int
  rule(state)(x)(1) match{
       ^Turmite:69: error: ambiguous reference to overloaded definition,
both method state in class Turmite of type => Int
and  method state in class Turmite of type => Int
match expected type ?
  state = rule(state)(x)(2)
  ^Turmite:75: error: not found: value init
		init();
                ^Turmite:54: error: method state_= is defined twice
  conflicting symbols both originated in file 'plm.runtime160.Turmite'
var state = 0
    ^Turmite:54: error: method state is defined twice
  conflicting symbols both originated in file 'plm.runtime160.Turmite'
var state = 0
    ^